--- a/case-studies.html
+++ b/case-studies.html
@@ -102,7 +102,7 @@
                         <span><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>We're Hiring</tag></span>
-                        <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
+                        <span class="span-position"><a class="fontLatoRegular resources" target="_blank"href="/">Resources</a>
                             <div class="dropdown">
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
@@ -478,25 +478,25 @@
             <div class="row footer_social_media1">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                     style="display: flex;justify-content: flex-start;margin-left: 14px;">
-                    <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
+                    <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"rel="noreferrer"
                         style="text-decoration: none;">
                         <samp class="social_icon">
                             <i class="fa fa-linkedin " aria-hidden="true"></i>
                         </samp>
                     </a>
-                    <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"
+                    <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"rel="noreferrer"
                         style="text-decoration: none;">
                         <samp class="social_icon">
                             <i class="fa fa-facebook " aria-hidden="true"></i>
                         </samp>
                     </a>
-                    <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"
+                    <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"rel="noreferrer"
                         style="text-decoration: none;">
                         <samp class="social_icon">
                             <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                         </samp>
                     </a>
-                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"
+                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"rel="noreferrer"
                         style="text-decoration: none;">
                         <samp class="social_icon">
                             <i class="fa fa-twitter " aria-hidden="true"></i>
@@ -553,25 +553,25 @@
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                         style="display: flex;justify-content: flex-start; display: none;">
-                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
+                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"rel="noreferrer"
                             style="text-decoration: none;margin-left: 10px">
                             <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"
+                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"rel="noreferrer"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"
+                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"rel="noreferrer"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"
+                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"rel="noreferrer"
                             style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-twitter " aria-hidden="true"></i>
