worked on changes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </ul>
             <ul class="menu mobile_menu_close"style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a href="/">
+                    <a href="/"rel="noreferrer">
                       <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
@@ -824,22 +824,22 @@
                 </div>
                 <div class = "row footer_social_media1">
                     <div class = "col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link" style="display: flex;justify-content: flex-start;margin-left: 14px;">
-                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" rel="noreferrer" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-linkedin " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" rel="noreferrer" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
+                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" rel="noreferrer"style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                             </samp>
                         </a>
-                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" rel="noreferrer" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-twitter " aria-hidden="true"></i>
                             </samp>
@@ -889,22 +889,22 @@
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                             style="display: flex;justify-content: flex-start; display: none;">
-                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" rel="noreferrer" style="text-decoration: none;margin-left: 10px">
                                 <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" rel="noreferrer" style="text-decoration: none;">
                             <samp class="social_icon">
                                 <i class="fa fa-facebook " aria-hidden="true"></i>
                             </samp>
                            </a>
-                           <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                           <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" rel="noreferrer" style="text-decoration: none;" >
                                 <samp class="social_icon">
                                     <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                                 </samp>
                             </a>
-                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" rel="noreferrer" style="text-decoration: none;">
                                 <samp class="social_icon">
                                 <i class="fa fa-twitter " aria-hidden="true"></i>
                             </samp>
