--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                         <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank">Resources</a>
                             <div class="dropdown">
                                 
-                                <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
+                                <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
-                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
+                                <a id="casestudy" href="./case-studies">Case-Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
