--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@
     <div class="quick_facts container-fluid">
         <section class="container   text-center">
         <p class="fontGraphikRegular facts_head">We’ve  achieved  something…</p>
-        <h3 class="fontGraphikSemibold">
+        <p class="fontGraphikSemibold" style="font-size: 42px;">
             Quick Facts
-        </h3>
+        </p>
         <div class="hr">
         
         </div>
@@ -652,7 +652,7 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
                 <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
                     <span> 
-                            TALK TO US &nbsp
+                            TALK TO US &nbsp;
                             <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     </span></button>
             </div>
