--- a/who-we-are.html
+++ b/who-we-are.html
@@ -116,7 +116,7 @@
                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
                                 
-                                <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
+                                <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
                                  <a id="saasmetrics" href="./case-studies">Case-Studies</a>
@@ -152,7 +152,7 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank"  href="/">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
