--- a/Locuscare.html
+++ b/Locuscare.html
@@ -125,7 +125,7 @@
 
     <div class="header_mobile" style="display: none;">
         <div class="crayond_logo_mobile">
-            <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px"height="124px" alt="logo-crayond"
+            <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond"
                     src="./images/logo-crayond@2x.jpg" />&nbsp;</a>
         </div>
         <div class="icon-container">
