--- a/managedcare.html
+++ b/managedcare.html
@@ -972,7 +972,7 @@
         
             <div class="row col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 index_head_1"style="margin:0px">
                 <div class=" title_web col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <h1 class="managed_care_title">Recommendations
+                    <h1 class="managed_care_title_1">Recommendations
                     </h1>
                     <div class="row">
                         <div class="col-12 col-md-12 col-lg-7 col-xl-7">
