--- a/managedcare.html
+++ b/managedcare.html
@@ -971,7 +971,7 @@
     <div class="container-fluid quick_onboard_1">
         
             <div class="row col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 index_head_1"style="margin:0px">
-                <div class=" title_web col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class=" title_web_1 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <h1 class="managed_care_title_1">Recommendations
                     </h1>
                     <div class="row">
