--- a/Locuscare.html
+++ b/Locuscare.html
@@ -542,10 +542,10 @@
                     <div class="  row head_details"style="margin-top:20px">
                         
                              <div class="row">
-                            <div class="col-1"style="">
+                            <div class="col-1 dot_li"style="">
                             <span> <li style="color:#2BD2EB;font-size:18px;margin-top:-4px" ></li></span>
                             </div>
-                            <div class="col-11"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
+                            <div class="col-11 dot_des"style="color:#FFFFFFB3;font-size:18px;padding-left:0px">
                             The MVP was launched after vigorous testing.
                             </div>
                         </div>
