--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -1244,8 +1244,10 @@ return `
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
     // $('.college_cards').masonry({
