--- a/contact.html
+++ b/contact.html
@@ -537,8 +537,10 @@ $("#nav-toggle").click(function(){
   $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
   </script>
 </html>
