--- a/index.html
+++ b/index.html
@@ -1004,9 +1004,10 @@ $("#nav-toggle").click(function(){
 $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
-  $('.header_mobile').collapse('hide');
-  
+$("#nav-close").click(function(event){
+  $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
 </script>
