--- a/products.html
+++ b/products.html
@@ -474,9 +474,10 @@ input:focus:invalid {
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
-
     </script>
 </html>
