--- a/GDPR.html
+++ b/GDPR.html
@@ -937,8 +937,10 @@ Crayon'd will also retain Service Data for internal analysis purposes. Service D
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
     </script>
 
