--- a/ebooks.html
+++ b/ebooks.html
@@ -902,8 +902,10 @@
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
     $(document).on('click', 'a[href^="#"]', function (event) {
