--- a/ourapproach.html
+++ b/ourapproach.html
@@ -1182,8 +1182,10 @@ $("#nav-toggle").click(function(){
   $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
   </script>
