--- a/saas-metrics/customer-acqisation-cost.html
+++ b/saas-metrics/customer-acqisation-cost.html
@@ -736,8 +736,10 @@
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
 </script>
