--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -1095,8 +1095,10 @@ return `
     $('.icon-container').click(function(){
 	$('.header_mobile').addClass('menu-open')
 });
-$("#nav-close").click(function(){
+$("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
+  event.preventDefault()
+  event.stopPropagation()
 });
 
 
