--- a/chennai-super-kings.html
+++ b/chennai-super-kings.html
@@ -523,7 +523,7 @@
                         <img class="view"  alt="group897" src="images/csk assets/view cart@2x.svg" style="width:100%">
                     </div>
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                        <img class="web"  alt="group897" src="images/csk assets/Web 1366.svg">
+                        <img class="web"  alt="group897" src="images/csk assets/Web 13661@2x.svg">
                     </div>
                 </div>
                 <div class="row">
@@ -531,14 +531,14 @@
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="padding-right:0px">
                             
                         <img class="my_whistle"
-                        alt="group897" src="images/csk assets/03_My_Whistle_From_Home_Template_Submit1@2x.svg">
+                        alt="group897ff" src="images/csk assets/03_My_Whistle_From_Home_Template_Submit1@2x.svg">
                     </div>
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                         <img class="whistles_from"
-                        alt="group8973"  src="images/csk assets/1.01_Whistles_From_Home_Landing_Page2@2x.svg" style="width:100%">
+                        alt="group8973"  src="images/csk assets/1.01_Whistles_From_Home_Landing_Page 2@2x.svg" style="width:100%">
                     </div>
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                        <img class="web1920"  alt="group897" src="images/csk assets/Web 1920.svg">
+                        <img class="web1920"  alt="group897fff" src="images/csk assets/Web 19203@2x.svg">
                     </div>
                 </div>
                 <div class="row">
@@ -547,7 +547,7 @@
 
                     </div>
                     <div class=" col-6 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                        <img class="csk_landing"  alt="group897" src="images/csk assets/01_CSK_Landing_Page.svg"
+                        <img class="csk_landing"  alt="group897666" src="images/csk assets/01_CSK_Landing_Page1@2x.svg"
                             style="width:100%">
                         <img class="number90"   alt="group897" src="images/csk assets/Group 5277.svg">
                     </div>
