worked on similar changes in managed care page and locus care page

--- a/managedcare.html
+++ b/managedcare.html
@@ -316,7 +316,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 col-xl-6 img_1">
-                    <img class="img_common" alt="common" src="images/undraw_Scrum_board_re_wk7v (1).svg">
+                    <img class="img_common1" alt="common" src="images/undraw_Scrum_board_re_wk7v (1).svg">
                 </div>
             </div>
         </div>
