worked on changes in evangelism word

--- a/managedcare.html
+++ b/managedcare.html
@@ -303,7 +303,7 @@
                         <p class="weeks">2 Weeks</p>
                     </div>
                     <div class="row">
-                        <p class="planning_evegelism">Planning + Evengelism</p>
+                        <p class="planning_evegelism">Planning + Evangelism</p>
                     </div>
                     <div class="row">
                         <ul class="lists_order">
@@ -335,7 +335,7 @@
                         <p class="weeks">4 Weeks</p>
                     </div>
                     <div class="row">
-                        <p class="planning_evegelism">Design + Evengelism</p>
+                        <p class="planning_evegelism">Design + Evangelism</p>
                     </div>
                     <div class="row">
                         <ul class="lists_order">
@@ -365,7 +365,7 @@
                         <p class="weeks">4 Weeks</p>
                     </div>
                     <div class="row">
-                        <p class="planning_evegelism">Design + Evengelism</p>
+                        <p class="planning_evegelism">Design + Evangelism</p>
                     </div>
                     <div class="row">
                         <ul class="lists_order">
