worked on notification line

--- a/managedcare.html
+++ b/managedcare.html
@@ -1005,7 +1005,7 @@
             </div>
             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
                 <p class="Title_details_1 ">The platform allows service professionals to be available at all
-                    times for their clients. Tasks can also be automated to ensure continuous, real- time
+                    times for their clients. <br/>Tasks can also be automated to ensure continuous, real- time
                     support.</p>
             </div>
         </div>
