worked on O in oppertunities

--- a/Locuscare.html
+++ b/Locuscare.html
@@ -102,14 +102,14 @@
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                         <span ><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>We're Hiring</tag></span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">Opportunities</a><tag>We're Hiring</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources" href="/" target="_blank">Resources</a>
                             <div class="dropdown">
                                 
                                 <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
-                                <a id="casestudy" href="./case-studies">Case-Studies</a>
+                                <a id="casestudy" href="./case-studies">Case Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -151,7 +151,7 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
-            <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+            <li class="sub-menu"><a href="./case-studies">Case Studies</a></li>
             
 
                 <li class="menu-item"><a href="./contact">Contact</a>
@@ -476,7 +476,7 @@
 </div>
         <div class="container-fluid web_launch" style="background: #2B2756;margin-top:8%;height:600px">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-5"
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-5 launch_1"
                     style="margin-top:2%;padding: 5% 2% 5% 10%;">
                     <div class="  row about_head">
                         <div class=" col-12" style="padding-left:0px">
