--- a/case-studies.html
+++ b/case-studies.html
@@ -101,14 +101,14 @@
                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                         <span><a class="fontLatoRegular" href="./who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="./ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">opportunities</a><tag>We're Hiring</tag></span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/opportunities">Opportunities</a><tag>We're Hiring</tag></span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank" href="/">Resources</a>
                             <div class="dropdown">
 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics </a>
-                                <a id="saasmetrics" href="/case-studies">Case-Studies </a>
+                                <a id="saasmetrics" href="/case-studies">Case Studies </a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -150,7 +150,7 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li> 
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
-                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case Studies</a></li>
 
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
