--- a/products.html
+++ b/products.html
@@ -125,7 +125,7 @@ input:focus:invalid {
                                 <a id="blogs" href="https://www.crayond.com/blog"> Blog</a>
                                 <a id="glossary" href="./glossary"> Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
-                                 <a id="saasmetrics" href="./case-studies">Case-Studies</a>
+                                 <a id="saasmetrics" href="./case-studies">Case Studies</a>
                                </div>
                                </div>
                            </span>
@@ -164,7 +164,7 @@ input:focus:invalid {
                <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
                <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
-               <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+               <li class="sub-menu"><a href="./case-studies">Case Studies</a></li>
                
                <li class="menu-item"><a href="./contact">Contact</a>
                </li>
