--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -120,7 +120,7 @@
                                 <a id="blogs" href="https://www.crayond.com/blog">Blog</a>
                                 <a id="glossary" href="./glossary">Glossary</a>
                                 <a id="saasmetrics" href="/saas-metrics/index" >Saas Metrics</a>
-                                <a id="saasmetrics" href="./case-studies">Case-Studies</a>
+                                <a id="saasmetrics" href="./case-studies">Case Studies</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
@@ -167,7 +167,7 @@
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
                 <li class="sub-menu"><a href="./glossary">Glossary</a></li>
                 <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
-                <li class="sub-menu"><a href="./case-studies">Case-Studies</a></li>
+                <li class="sub-menu"><a href="./case-studies">Case Studies</a></li>
                 <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
                 <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
