--- a/ebooks.html
+++ b/ebooks.html
@@ -137,7 +137,7 @@
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
                    
                 </li>
-                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
+                <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
