--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank" href="/">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
             <li class="sub-menu"><a href="/saas-metrics/index">Saas Metrics</a></li>
-            <li class="sub-menu"><a href="./case-studies">Case Studies</a></li>
+            <li class="sub-menu"><a href="/case-studies">Case Studies</a></li>
             
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
