worked on nav button working functions

--- a/glossary.html
+++ b/glossary.html
@@ -132,7 +132,7 @@
              </li>
              <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
              </li>
-             <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+             <li class="menu-item" id="nav-toggle"><a target="_blank" >Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
              </li>
              <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
              <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
@@ -144,9 +144,9 @@
                  <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
              </li> -->
              </ul>
-             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+             <ul class="menu mobile_menu_close" id="nav-close"  style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                  <li class="menu-item">
-                     <a href="/">
+                     <a>
                        <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                      </a>
                  </li>
