--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
     <link rel="stylesheet" href="plugin/css/font-awesome.css">
     <link rel="stylesheet" href="plugin/css/font-awesome.min.css">
 
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="./plugin/aos.css" rel="stylesheet">
 
     <!-- css  -->
     <link rel="stylesheet" href="./styles/styles.css">
-
+   
    
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -126,7 +129,7 @@
             <div class="bar bar2"></div>
             </div>
         </div>
-        <div class="mobile-menu" id="nav-close">
+        <div class="mobile-menu" >
             <ul class="menu">
             <li class="menu-item"><a href="./who-we-are">Who We Are</a>
             </li>
@@ -136,7 +139,7 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
@@ -149,9 +152,9 @@
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
             </li> -->
             </ul>
-            <ul class="menu mobile_menu_close"style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+            <ul class="menu mobile_menu_close" id="nav-close"style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a href="/"rel="noreferrer">
+                    <a rel="noreferrer">
                       <img src="./images/close.svg" alt="menuclose"  data-toggle="collapse" data-target="#nav-close"style="padding-bottom: 4px;" />
                     </a>
                 </li>
