--- a/saas-metrics/monthly-recurring-revenue.html
+++ b/saas-metrics/monthly-recurring-revenue.html
@@ -172,9 +172,9 @@
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
             </li> -->
             </ul>
-            <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+            <ul class="menu mobile_menu_close" id="nav-close"  style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a href="/">
+                    <a >
                         <img src="/images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
@@ -628,12 +628,12 @@
         </footer>
     </section>
 </body>
-<script src="./plugin/jquery.min.js"></script>
-<script src="./plugin/bootstrap.min.js"></script>
-<script src="./plugin/aos.js"></script>
-<script src="./plugin/loader.js"></script>
+<script src="/plugin/jquery.min.js"></script>
+<script src="/plugin/bootstrap.min.js"></script>
+<script src="/plugin/aos.js"></script>
+<script src="/plugin/loader.js"></script>
 <!-- // Freshchat -->
-<script src="./plugin/freshchat/footer.js"></script>
+<script src="/plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
 <script>
 
