--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -160,7 +160,7 @@
                 <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
                     
                 </li>
-                <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down"
+                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down"
                             style="margin-left:10px;" aria-hidden="true"></i></a>
                 </li>
                 <li class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
@@ -173,10 +173,10 @@
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
             </li> -->
             </ul>
-            <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+            <ul class="menu mobile_menu_close" id="nav-close"  style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a href="/">
-                        <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                    <a>
+                        <img src="/images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
             </ul>
@@ -611,12 +611,12 @@
         </footer>
     </section>
 </body>
-<script src="./plugin/jquery.min.js"></script>
-<script src="./plugin/bootstrap.min.js"></script>
-<script src="./plugin/aos.js"></script>
-<script src="./plugin/loader.js"></script>
+<script src="/plugin/jquery.min.js"></script>
+<script src="/plugin/bootstrap.min.js"></script>
+<script src="/plugin/aos.js"></script>
+<script src="/plugin/loader.js"></script>
 <!-- // Freshchat -->
-<script src="./plugin/freshchat/footer.js"></script>
+<script src="/plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
 <script>
 
