--- a/saas-metrics/index.html
+++ b/saas-metrics/index.html
@@ -53,12 +53,13 @@
 
     <!-- custom css and responsive css-->
     <link rel='stylesheet' href="/styles/styles.css">
+
     <link rel="stylesheet" href="/styles/Saas_metric/Saas_metric.css">
     
 
     <!-- font-awesome icons -->
-    <link rel="stylesheet" href="plugin/css/font-awesome.css">
-    <link rel="stylesheet" href="plugin/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/plugin/css/font-awesome.css">
+    <link rel="stylesheet" href="/plugin/css/font-awesome.min.css">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -132,7 +133,7 @@
             <div class="bar bar2"></div>
             </div>
         </div>
-        <div class="mobile-menu" id="nav-close">
+        <div class="mobile-menu">
             <ul class="menu">
             <li class="menu-item"><a href="./who-we-are">Who We Are</a>
             </li>
@@ -142,7 +143,8 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a>
             </li>
-            <li class="menu-item" id="nav-toggle"><a target="_blank" href="#">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+            <li class="menu-item" id="nav-toggle"><a target="_blank"
+                >Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
             <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
@@ -155,10 +157,10 @@
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
             </li> -->
             </ul>
-            <ul class="menu mobile_menu_close"style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+            <ul class="menu mobile_menu_close"  id="nav-close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
-                    <a href="/"rel="noreferrer">
-                      <img src="./images/close.svg" alt="menuclose"  data-toggle="collapse" data-target="#nav-close"style="padding-bottom: 4px;" />
+                    <a rel="noreferrer">
+                      <img src="/images/close.svg" alt="menuclose"  data-toggle="collapse" data-target="#nav-close"style="padding-bottom: 4px;" />
                     </a>
                 </li>
             </ul>
@@ -1025,14 +1027,14 @@ return `
 </div>`
 });
         </script> -->
-<script src="./plugin/jquery.min.js"></script>
-<script src="./plugin/bootstrap.min.js"></script>
-<script src="./plugin/aos.js"></script>
-<script src="./plugin/loader.js"></script>
+<script src="/plugin/jquery.min.js"></script>
+<script src="/plugin/bootstrap.min.js"></script>
+<script src="/plugin/aos.js"></script>
+<script src="/plugin/loader.js"></script>
 <!-- // Freshchat -->
-<script src="./plugin/freshchat/footer.js"></script>
+<script src="/plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+
 <script type="text/javascript">
     AOS.init();
     // Hide Header on on scroll down
@@ -1089,8 +1091,7 @@ return `
 });
 $("#nav-close").click(function(event){
   $('.header_mobile').removeClass('menu-open')
-  event.preventDefault()
-  event.stopPropagation()
+
 });
 
 
