--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -623,12 +623,12 @@
         </footer>
     </section>
 </body>
-<script src="./plugin/jquery.min.js"></script>
-<script src="./plugin/bootstrap.min.js"></script>
-<script src="./plugin/aos.js"></script>
-<script src="./plugin/loader.js"></script>
+<script src="/plugin/jquery.min.js"></script>
+<script src="/plugin/bootstrap.min.js"></script>
+<script src="/plugin/aos.js"></script>
+<script src="/plugin/loader.js"></script>
 <!-- // Freshchat -->
-<script src="./plugin/freshchat/footer.js"></script>
+<script src="/plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
 <script>
 
