--- a/Locuscare.html
+++ b/Locuscare.html
@@ -244,7 +244,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container about">
         <div class="  row about_head">
             <div class=" col-12">
                 <p class="title"> About Locuscare</p>
