worked on changes in alignment

--- a/managedcare.html
+++ b/managedcare.html
@@ -477,7 +477,7 @@
 
     <!-- section 5 starts here -->
     <div class="container-fluid quick_onboard">
-        <div class="container">
+        <div class="container qui">
             <div class="row col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 index_head_1">
 
 
@@ -579,7 +579,7 @@
                     </div>
                 </div>
                 <div class="row image_quick_on_6">
-                    <div class="col-12 "style="padding-left:0px">
+                    <div class="col-12 quick_img"style="padding-left:0px">
                          <img class="manage_products_image" alt="care"src="images/4.6.Managedcare_Care 123.png"style="width:100%;box-shadow: -40px -25px 99px #363A570D;">
                     </div>
                 </div>
